--- a/TextEditor/MainWindow.xaml
+++ b/TextEditor/MainWindow.xaml
@@ -1,8 +1,8 @@
-﻿<Window x:Class="CollaborativeTextEditing.MainWindow"
+﻿<Window x:Class="TextEditor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Collaborative Text Editing" Height="685" Width="800"
-        Background="#1C1C1C" Foreground="White">
+        Background="#1C1C1C" Foreground="White" >
     <Grid Margin="0,0,0,29">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -17,12 +17,14 @@
         <TextBlock Text="Section 1" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="10"/>
         <TextBlock Text="Section 2" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Grid.Column="1" Margin="10"/>
 
-        <TextBox x:Name="TextBox1" Grid.Row="1" Grid.Column="0" Margin="10,10,10,60" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
+        <TextBox IsReadOnly="True" x:Name="TextBox1" Grid.Row="1" Grid.Column="0" Margin="10,10,10,60" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
                   Background="#3C3C3C" Foreground="White" BorderBrush="#007ACC" BorderThickness="1">
         </TextBox>
-        <TextBox x:Name="TextBox2" Grid.Row="1" Grid.Column="1" Margin="10,10,10,60" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
-                 Background="#3C3C3C" Foreground="White" BorderBrush="#007ACC" BorderThickness="1">
+        <TextBox IsReadOnly="True" x:Name="TextBox2" Grid.Row="1" Grid.Column="1" Margin="10,10,10,60" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
+                 Background="#3C3C3C" Foreground="White" BorderBrush="#007ACC" BorderThickness="1" >
         </TextBox>
+        <Button x:Name="Refresh1" Content="Refresh" HorizontalAlignment="Left" Margin="160,554,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click1"/>
+        <Button x:Name="Refresh2" Content="Refresh" HorizontalAlignment="Center" Margin="0,554,0,0" Grid.Row="1" VerticalAlignment="Top" Click="Button_Click2" Grid.Column="1"/>
     </Grid>
 </Window>
 
