--- a/TextEditor1/MainWindow.xaml
+++ b/TextEditor1/MainWindow.xaml
@@ -1,8 +1,8 @@
-﻿<Window x:Class="CollaborativeTextEditing.MainWindow"
+﻿<Window x:Class="TextEditor1.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Collaborative Text Editing" Height="685" Width="800"
-        Background="#1C1C1C" Foreground="White">
+        Background="#1C1C1C" Foreground="White" >
     <Grid Margin="0,0,0,29">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -18,10 +18,10 @@
         <TextBlock Text="Section 2" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Grid.Column="1" Margin="10"/>
 
         <TextBox x:Name="TextBox1" Grid.Row="1" Grid.Column="0" Margin="10,10,10,60" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
-                 Background="#3C3C3C" Foreground="White" BorderBrush="#007ACC" BorderThickness="1">
+                 Background="#3C3C3C" Foreground="White" BorderBrush="#007ACC" BorderThickness="1" TextChanged="TextBox_TextChanged">
         </TextBox>
-        <TextBox x:Name="TextBox2" Grid.Row="1" Grid.Column="1" Margin="10,10,10,60" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
-                 Background="#3C3C3C" Foreground="White" BorderBrush="#007ACC" BorderThickness="1">
+        <TextBox IsReadOnly="True" x:Name="TextBox2" Grid.Row="1" Grid.Column="1" Margin="10,10,10,60" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
+                 Background="#FFB36565" Foreground="White" BorderBrush="#007ACC" BorderThickness="1">
         </TextBox>
     </Grid>
 </Window>
