--- a/TextEditor2/MainWindow.xaml
+++ b/TextEditor2/MainWindow.xaml
@@ -1,12 +1,27 @@
 ﻿<Window x:Class="TextEditor2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TextEditor2"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Collaborative Text Editing" Height="685" Width="800"
+        Background="#1C1C1C" Foreground="White">
+    <Grid Margin="0,0,0,29">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <TextBlock Text="Section 1" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Margin="10"/>
+        <TextBlock Text="Section 2" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" Grid.Column="1" Margin="10"/>
+
+        <TextBox IsReadOnly="True" x:Name="TextBox1" Grid.Row="1" Grid.Column="0" Margin="10,10,10,60" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
+                 Background="#FFB36565" Foreground="White" BorderBrush="#007ACC" BorderThickness="1">
+        </TextBox>
+        <TextBox x:Name="TextBox2" Grid.Row="1" Grid.Column="1" Margin="10,10,10,60" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" 
+                 Background="#3C3C3C" Foreground="White" BorderBrush="#007ACC" BorderThickness="1" TextChanged="TextBox_TextChanged">
+        </TextBox>
     </Grid>
 </Window>
